--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "esnext",
     "moduleResolution": "node",
-    "noEmitOnError": true,
-    "lib": ["es2017", "dom"],
-    "strict": true,
-    "esModuleInterop": false,
-    "allowSyntheticDefaultImports": true,
-    "experimentalDecorators": true,
-    "importHelpers": true,
-    "outDir": "out-tsc",
+    "removeComments": false,
     "sourceMap": true,
-    "inlineSources": true,
-    "rootDir": "./",
-    "incremental": true
+    "target": "es2018",
+    "outDir": "dist", 
+    "experimentalDecorators": true,
+    "declaration": true,
+    "strict": true,
+    "module": "ESNext",
+    "noEmitOnError": true,
+    "lib": ["es2017", "dom"], 
+    "esModuleInterop": true, 
+    "isolatedModules": true 
   },
-  "include": ["**/*.ts"]
+  "include": ["src/**/*"] // Include all files within src directory
 }
