--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gatorpower-app",
-  "description": "Webcomponent gatorpower-app following open-wc recommendations",
+  "description": "Gatorpower.com",
   "license": "MIT",
   "author": "gatorpower-app",
   "version": "0.0.0",
