--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,41 @@
-## editors
-/.idea
-/.vscode
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-## system files
+# dependencies
+/node_modules
+/.pnp
+.pnp.*
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/versions
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
 .DS_Store
+*.pem
 
-## npm
-/node_modules/
-/npm-debug.log
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
 
-## testing
-/coverage/
+# env files (can opt-in for committing if needed)
+.env*
 
-## temp folders
-/.tmp/
+# vercel
+.vercel
 
-# build
-/_site/
-/dist/
-/out-tsc/
-
-storybook-static
-custom-elements.json
+# typescript
+*.tsbuildinfo
+next-env.d.ts
